[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godot_helper_pack/core/2d/shape/shape_draw_2d.gd" type="Script" id=1]
[ext_resource path="res://components/spawner/Spawner.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 600, 940 )

[node name="Spawner" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShapeDraw2D" type="Node2D" parent="CollisionShape2D"]
visible = false
script = ExtResource( 1 )
color = Color( 0.0196078, 0.160784, 0.384314, 0.184314 )
texture = null
non_rect_texture_offset = Vector2( 0, 0 )
non_rect_texture_scale = Vector2( 1, 1 )
nine_patch_draw_center = true
nine_patch_region_rect = Rect2( 0, 0, 0, 0 )
nine_patch_patch_left = 0
nine_patch_patch_right = 0
nine_patch_patch_top = 0
nine_patch_patch_bottom = 0
nine_patch_axis_stretch_horizontal = 0
nine_patch_axis_stretch_vertical = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
